--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,13 +14,13 @@ jobs:
 
     runs-on: macos-latest
 
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Set up JDK 8
-#       uses: actions/setup-java@v2
-#       with:
-#         java-version: '11'
-#         distribution: 'adopt'
-#         cache: maven
-#     - name: Build with Maven
-#       run: mvn -B package --file pom.xml
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 8
+      uses: actions/setup-java@v2
+      with:
+        java-version: '8'
+        distribution: 'adopt'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
